# mlc-assignment

./: Carnavalskleding.xlsx  MLC developer assessment.docx  README.md  docker-compose.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  config.ini  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 2024_03_28_1311-37820a77c47f_initial_migration.py  2025_08_06_0111-181a7aa9aff0_initial.py
api/assessment/: main.py  models.py  settings.py
api/assessment/api/: application.py  dependencies.py  lifespan.py
api/assessment/api/fastapi/: application.py  dependencies.py  lifespan.py
api/assessment/api/routes/: __init__.py  dataset.py  dataset_feature.py  dataset_parser.py  dataset_product.py  dataset_value.py  generic_routes.py  query_params.py
api/assessment/dataset/: model.py  routes.py  schemas.py  service.py
api/assessment/dataset_feature/: model.py  routes.py  schemas.py  service.py
api/assessment/dataset_parser/: routes.py  schemas.py  service.py
api/assessment/dataset_parser/parsers/: xlsx.py
api/assessment/dataset_product/: model.py  routes.py  schemas.py  service.py
api/assessment/dataset_value/: model.py  routes.py  schemas.py  service.py
api/assessment/db/: base_service.py  sqlalchemy.py
api/assessment/models/: __init__.py  dataset.py  dataset_feature.py  dataset_product.py  dataset_value.py
db/: .env.example
web/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: index.ts
(+11 files in other folders)
